[project]
name = "example_package_hyun0429" 
version = "0.0.1"
authors = [
  { name="hyun0429", email="ghkdgus29@naver.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ghkdgus29/python-packaging-tutorial" 
Issues = "https://github.com/ghkdgus29/python-packaging-tutorial/issues"
